--- a/app/src/main/res/anim/item_animation.xml
+++ b/app/src/main/res/anim/item_animation.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
+<set
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="300">
 
     <translate
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:interpolator="@android:anim/decelerate_interpolator"
         android:fromYDelta="50%p"
-        android:toYDelta="0"
-        />
+        android:toYDelta="0" />
 
     <alpha
+        android:interpolator="@android:anim/decelerate_interpolator"
         android:fromAlpha="0"
-        android:toAlpha="1"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        />
+        android:toAlpha="1" />
 
 </set>
