--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -49,7 +49,7 @@
             android:id="@+id/menu_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_dots"
+            android:src="@drawable/ic_more_vert_black_24px"
             android:paddingLeft="8dp"
             android:paddingStart="8dp"
             android:paddingRight="0dp"
