--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/new_game"
-        android:title="Take a photo" />
+        android:id="@+id/take_picture"
+        android:title="@string/take_picture" />
 
     <item
-        android:id="@+id/help"
-        android:title="View photos" />
+        android:id="@+id/view_pictures"
+        android:title="@string/view_pictures" />
 
     <item
-        android:id="@+id/delete"
-        android:title="Delete entry" />
+        android:id="@+id/delete_entry"
+        android:title="@string/delete_entry" />
 
 </menu>
