--- a/app/src/main/res/anim/slide_down.xml
+++ b/app/src/main/res/anim/slide_down.xml
@@ -5,7 +5,7 @@
 
     <translate
         android:interpolator="@android:anim/decelerate_interpolator"
-        android:fromYDelta="-10%p"
+        android:fromYDelta="-100%"
         android:toYDelta="0" />
 
 </set>
