--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -2,16 +2,16 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
+    <!--<item
         android:id="@+id/take_picture"
         android:title="@string/take_picture" />
 
     <item
         android:id="@+id/view_pictures"
-        android:title="@string/view_pictures" />
+        android:title="@string/view_pictures" />-->
 
     <item
-        android:id="@+id/delete_entry"
-        android:title="@string/delete_entry" />
+        android:id="@+id/remove_item"
+        android:title="@string/remove_item" />
 
 </menu>
