--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/action_delete_sweep"
+        android:id="@+id/action_remove_all"
         android:icon="@drawable/ic_delete_sweep_black_24dp"
         android:title="@string/toolbar_menu_title"
         app:showAsAction="always">
