--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -14,7 +14,7 @@
     <item
         android:id="@+id/action_remove_all"
         android:icon="@drawable/ic_delete_sweep_black_24dp"
-        android:title="@string/remove_all"
+        android:title="@string/clear_inventory"
         app:showAsAction="ifRoom" />
 
     <item
