--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -18,7 +18,8 @@
             android:id="@+id/barcode_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:inputType="text" />
 
         <TextView
             android:id="@+id/current_location_title"
@@ -38,7 +39,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="-"
             app:layout_constraintBaseline_toBaselineOf="@+id/current_location_title"
             app:layout_constraintStart_toEndOf="@+id/current_location_title" />
 
@@ -60,7 +60,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="-"
             app:layout_constraintBaseline_toBaselineOf="@+id/last_scan_title"
             app:layout_constraintStart_toEndOf="@+id/last_scan_title" />
 
@@ -82,7 +81,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="-"
             app:layout_constraintBaseline_toBaselineOf="@+id/total_items_title"
             app:layout_constraintStart_toEndOf="@+id/total_items_title" />
 
@@ -104,7 +102,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="-"
             app:layout_constraintBaseline_toBaselineOf="@+id/total_containers_title"
             app:layout_constraintStart_toEndOf="@+id/total_containers_title" />
 
@@ -114,25 +111,10 @@
         android:id="@+id/item_list_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingBottom="60dp"
-        android:clipToPadding="false"
         android:layoutAnimation="@anim/layout_animation"
         app:layout_constraintTop_toBottomOf="@+id/info_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <Button
-        android:id="@+id/random_scan_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/item_list_view"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/random_scan_button_text"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
