--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -15,7 +15,7 @@
         android:id="@+id/action_remove_all"
         android:icon="@drawable/ic_delete_sweep_black_24dp"
         android:title="@string/clear_inventory"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_preload"
