--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textViewStyle">@style/InfoTextView</item>
+    </style>
+
+    <style name="InfoTextView" parent="android:Widget.TextView">
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="PreloadTheme" parent="Theme.AppCompat.Light.DarkActionBar">
