--- a/app/src/main/res/layout/preload_location_item_layout.xml
+++ b/app/src/main/res/layout/preload_location_item_layout.xml
@@ -17,16 +17,16 @@
         android:orientation="horizontal"
         android:gravity="center_vertical" >
 
-        <!--ProgressBar
+        <ProgressBar
             android:id="@+id/progress_loading"
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:visibility="gone"/-->
+            android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/item_location"
+            android:id="@+id/item_barcode"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
@@ -34,15 +34,9 @@
             android:layout_weight=".5"
             android:gravity="center_vertical"
             android:textSize="15sp" />
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:background="#0000ff" />
 
         <TextView
-            android:id="@+id/item_barcode"
+            android:id="@+id/item_location"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="4dp"
@@ -53,7 +47,6 @@
 
         <ImageButton
             android:id="@+id/menu_button"
-            android:focusable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_more_vert_black_24px"
@@ -63,7 +56,8 @@
             android:paddingEnd="4dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
-            android:background="#00000000"
+            android:layout_gravity="top"
+            android:background="@null"
             android:contentDescription="@string/menu_description" />
 
     </LinearLayout>
