--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -31,15 +31,16 @@
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
-            android:layout_weight=".5"
+            android:layout_weight=".7"
             android:gravity="center_vertical"
             android:textSize="15sp" />
         <View
+            android:id="@+id/item_divider"
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="#0000ff" />
+            android:background="#afafaf" />
 
         <TextView
             android:id="@+id/item_barcode"
