--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -98,10 +98,21 @@
         android:id="@+id/item_list_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingBottom="60dp"
+        android:clipToPadding="false"
         android:layoutAnimation="@anim/layout_animation"
         app:layout_constraintTop_toBottomOf="@+id/info_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <Button
+        android:id="@+id/random_scan_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Random Scan"
+        app:layout_constraintBottom_toBottomOf="@id/item_list_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
