--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textViewStyle">@style/InfoTextView</item>
+        <!--item name="android:textViewStyle">@style/InfoTextView</item-->
     </style>
 
     <style name="InfoTextView" parent="android:Widget.TextView">
