--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -7,18 +7,26 @@
 
     <item
         android:id="@+id/action_save_to_file"
-        android:icon="@drawable/ic_save_black_24dp"
+        android:icon="@drawable/ic_save_white_24dp"
         android:title="@string/save_to_file"
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/cancel_save"
+        android:icon="@drawable/ic_clear_white_24dp"
+        android:title="@string/cancel_save"
+        android:visible="false"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_remove_all"
-        android:icon="@drawable/ic_delete_sweep_black_24dp"
+        android:icon="@drawable/ic_delete_sweep_white_24dp"
         android:title="@string/clear_inventory"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_preload"
+        android:visible="false"
         android:title="@string/switch_to_preload"
         app:showAsAction="never"/>
 
