--- a/app/src/main/res/layout/preload_location_item_layout.xml
+++ b/app/src/main/res/layout/preload_location_item_layout.xml
@@ -18,8 +18,8 @@
         android:gravity="center_vertical" >
 
         <ProgressBar
-            android:id="@+id/progress_loading"
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+            android:id="@+id/progress_loading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:indeterminate="true"
@@ -30,6 +30,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
             android:layout_marginEnd="4dp"
             android:layout_weight=".5"
             android:gravity="center_vertical"
@@ -39,8 +41,8 @@
             android:id="@+id/item_location"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="4dp"
             android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
             android:layout_weight=".5"
             android:gravity="center"
             android:textSize="12sp" />
