--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -2,8 +2,9 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="40dp"
     android:orientation="horizontal"
     app:cardUseCompatPadding="true"
     app:cardPreventCornerOverlap="false"
@@ -15,56 +16,56 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:gravity="center_vertical" >
+        android:gravity="center" >
 
-        <!--ProgressBar
-            android:id="@+id/progress_loading"
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+        <!--me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+            android:id="@+id/progressbar_waiting"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:indeterminate="true"
-            android:visibility="gone"/-->
+            app:mpb_progressStyle="horizontal" /-->
 
         <TextView
-            android:id="@+id/item_barcode"
-            android:layout_width="match_parent"
+            android:id="@+id/barcode_text_view"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_weight=".5"
+            android:padding="4dp"
+            android:textSize="17sp"
             android:gravity="center"
-            android:textSize="15sp" />
+            android:layout_weight="1" />
+
         <View
-            android:id="@+id/item_divider"
+            android:id="@+id/divider_view"
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
-            android:background="#DFDFDF" />
+            android:background="#20000000" />
 
         <TextView
-            android:id="@+id/item_location"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_weight=".8"
+            android:id="@+id/location_text_view"
+            android:textColor="#7F000000"
+            android:layout_width="100dp"
+            android:layout_height="36dp"
+            android:paddingStart="4dp"
+            android:padding="4dp"
+            android:textSize="12sp"
             android:gravity="center"
-            android:textSize="12sp" />
+            tools:ignore="RtlSymmetry" />
 
         <ImageButton
             android:id="@+id/menu_button"
-            android:focusable="true"
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
+            android:background="@null"
             android:src="@drawable/ic_more_vert_white_24px"
-            android:paddingLeft="12dp"
             android:paddingStart="12dp"
-            android:paddingRight="4dp"
             android:paddingEnd="4dp"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:background="#00000000"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:layout_gravity="end"
             android:contentDescription="@string/menu_description" />
 
     </LinearLayout>
