--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -10,108 +10,161 @@
     android:orientation="vertical"
     tools:context="com.porterlee.mobileinventory.MainActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/info_layout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="#EFEFEF">
+        android:paddingBottom="2dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical">
 
         <me.zhanghai.android.materialprogressbar.MaterialProgressBar
-            android:id="@+id/progress_saving"
             style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+            android:id="@+id/progress_saving"
             android:layout_width="match_parent"
             android:layout_height="4dp"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
             app:mpb_useIntrinsicPadding="false"
             app:mpb_progressStyle="horizontal" />
 
-        <TextView
-            android:id="@+id/current_location_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/current_location_title_string"
-            android:layout_marginTop="4dp"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingEnd="8dp"
-            android:paddingRight="8dp"
-            android:textSize="15sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/current_location_title_string"
+                android:paddingEnd="8dp"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textColor="#FFFFFF"
+                tools:ignore="RtlSymmetry" />
+
+            <TextView
+                android:id="@+id/current_location"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:textColor="#FFFFFF"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/last_scan_title_string"
+                android:paddingEnd="8dp"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textColor="#FFFFFF"
+                tools:ignore="RtlSymmetry" />
+
+            <TextView
+                android:id="@+id/last_scan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:textColor="#FFFFFF" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/total_items_title_string"
+                android:paddingEnd="8dp"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textColor="#FFFFFF"
+                tools:ignore="RtlSymmetry"/>
+
+            <TextView
+                android:id="@+id/total_items"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:textColor="#FFFFFF" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/total_containers_title_string"
+                android:paddingEnd="8dp"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:textColor="#FFFFFF"
+                tools:ignore="RtlSymmetry"/>
+
+            <TextView
+                android:id="@+id/total_containers"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="17sp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:textColor="#FFFFFF" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/inventory_column_labels"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:background="#DF3F51B5"
+        app:layout_constraintTop_toBottomOf="@id/info_layout">
 
         <TextView
-            android:id="@+id/current_location"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@string/inventory_barcodes_column_title"
+            android:layout_marginEnd="1dp"
             android:textSize="15sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/current_location_title"
-            app:layout_constraintStart_toEndOf="@+id/current_location_title" />
+            android:textColor="#7FFFFFFF"
+            android:layout_weight="1"
+            android:gravity="center"/>
 
         <TextView
-            android:id="@+id/last_scan_title"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:text="@string/last_scan_title_string"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingEnd="8dp"
-            android:paddingRight="8dp"
+            android:text="@string/inventory_location_column_title"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="40dp"
             android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/current_location_title"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:textColor="#7FFFFFFF"
+            android:gravity="center"/>
 
-        <TextView
-            android:id="@+id/last_scan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/last_scan_title"
-            app:layout_constraintStart_toEndOf="@+id/last_scan_title" />
-
-        <TextView
-            android:id="@+id/total_items_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_items_title_string"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingEnd="8dp"
-            android:paddingRight="8dp"
-            android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/last_scan_title"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/total_items"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/total_items_title"
-            app:layout_constraintStart_toEndOf="@+id/total_items_title" />
-
-        <TextView
-            android:id="@+id/total_containers_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/total_containers_title_string"
-            android:paddingStart="8dp"
-            android:paddingLeft="8dp"
-            android:paddingEnd="8dp"
-            android:paddingRight="8dp"
-            android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/total_items_title"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <TextView
-            android:id="@+id/total_containers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/total_containers_title"
-            app:layout_constraintStart_toEndOf="@+id/total_containers_title" />
-
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_list_view"
@@ -120,7 +173,7 @@
         android:paddingBottom="60dp"
         android:clipToPadding="false"
         android:layoutAnimation="@anim/layout_animation"
-        app:layout_constraintTop_toBottomOf="@+id/info_layout"
+        app:layout_constraintTop_toBottomOf="@+id/inventory_column_labels"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
