--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -23,6 +23,7 @@
             android:id="@+id/progress_saving"
             android:layout_width="match_parent"
             android:layout_height="4dp"
+            android:max="480"
             app:mpb_useIntrinsicPadding="false"
             app:mpb_progressStyle="horizontal"/>
 
@@ -142,7 +143,7 @@
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:background="#DF3F51B5"
-        android:gravity="center"
+        android:gravity="end"
         app:layout_constraintTop_toBottomOf="@id/info_layout">
 
         <TextView
@@ -159,7 +160,7 @@
             android:layout_height="wrap_content"
             android:text="@string/inventory_location_column_title"
             android:layout_marginStart="5dp"
-            android:layout_marginEnd="36dp"
+            android:layout_marginEnd="37dp"
             android:textSize="15sp"
             android:textColor="#7FFFFFFF"
             android:gravity="center"/>
