--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -19,13 +19,21 @@
         android:orientation="horizontal"
         android:gravity="end">
 
-        <TextView
-            android:id="@+id/barcode_text_view"
-            android:layout_width="160dp"
-            android:layout_height="30dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="17sp"/>
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/barcode_text_view"
+                android:layout_width="160dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:textSize="17sp"/>
+
+        </LinearLayout>
 
         <View
             android:id="@+id/divider_view"
