--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -147,13 +147,15 @@
         app:layout_constraintTop_toBottomOf="@id/info_layout">
 
         <TextView
-            android:layout_width="160dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/inventory_barcodes_column_title"
             android:layout_marginEnd="5dp"
             android:textSize="15sp"
             android:textColor="#7FFFFFFF"
-            android:gravity="center"/>
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_weight="1"/>
 
         <TextView
             android:layout_width="110dp"
