--- a/app/src/main/res/layout-sw320dp/preload_locations_item_layout.xml
+++ b/app/src/main/res/layout-sw320dp/preload_locations_item_layout.xml
@@ -18,13 +18,22 @@
         android:orientation="horizontal"
         android:gravity="end">
 
-        <TextView
-            android:id="@+id/location_text_view"
-            android:textColor="#4F000000"
-            android:layout_width="280dp"
-            android:layout_height="30dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/location_text_view"
+                android:layout_width="280dp"
+                android:layout_height="30dp"
+                android:textSize="17sp"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
 
         <ImageButton
             android:id="@+id/menu_button"
