--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -27,6 +27,7 @@
     <item
         android:id="@+id/action_preload"
         android:title="@string/switch_to_preload"
+        android:visible="false"
         app:showAsAction="never" />
 
 </menu>
