--- a/app/src/main/res/layout/inventory_layout.xml
+++ b/app/src/main/res/layout/inventory_layout.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="com.porterlee.mobileinventory.InventoryActivity">
+    tools:context="com.porterlee.standardinventory.InventoryActivity">
 
     <LinearLayout
         android:id="@+id/info_layout"
