--- a/app/src/main/res/layout-sw320dp/inventory_item_layout.xml
+++ b/app/src/main/res/layout-sw320dp/inventory_item_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:orientation="horizontal"
@@ -13,56 +12,34 @@
     app:cardMaxElevation="1dp"
     app:cardElevation="1dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="end">
+    <TextView
+        android:id="@+id/barcode_text_view"
+        style="@style/Base.TextAppearance.AppCompat.Medium"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="36dp"
+        android:paddingEnd="8dp"
+        android:scrollHorizontally="true"
+        android:ellipsize="middle"
+        android:singleLine="true"
+        android:gravity="start"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/menu_button"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1">
+    <ImageButton
+        android:id="@+id/menu_button"
+        android:layout_width="40dp"
+        android:layout_height="0dp"
+        android:background="@null"
+        android:src="@drawable/ic_more_vert_white_24px"
+        android:paddingStart="8dp"
+        android:paddingEnd="4dp"
+        android:gravity="end"
+        android:contentDescription="@string/menu_description"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-            <TextView
-                android:id="@+id/barcode_text_view"
-                android:layout_width="160dp"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:textSize="17sp"/>
-
-        </LinearLayout>
-
-        <View
-            android:id="@+id/divider_view"
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:background="#20000000"/>
-
-        <TextView
-            android:id="@+id/location_text_view"
-            android:textColor="#4F000000"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            tools:ignore="RtlSymmetry"/>
-
-        <ImageButton
-            android:id="@+id/menu_button"
-            android:layout_width="36dp"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:src="@drawable/ic_more_vert_white_24px"
-            android:paddingStart="8dp"
-            android:paddingEnd="4dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:gravity="end"
-            android:contentDescription="@string/menu_description"/>
-
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
