Removed ability to select location by clicking it. Now it must be scanned again to be selected Removed continuous mode selection trigger mode set to DCD_TRIGGER_MODE_ONESHOT in onResume()

--- a/app/src/main/res/menu/inventory_menu.xml
+++ b/app/src/main/res/menu/inventory_menu.xml
@@ -24,10 +24,10 @@
         android:title="@string/clear_inventory"
         app:showAsAction="never" />
 
-    <item
+    <!--item
         android:id="@+id/action_continuous"
         android:checkable="true"
         app:showAsAction="never"
-        android:title="@string/continuous_mode_title"/>
+        android:title="@string/continuous_mode_title"/-->
 
 </menu>
