--- a/app/src/main/res/layout/inventory_item_layout.xml
+++ b/app/src/main/res/layout/inventory_item_layout.xml
@@ -11,8 +11,8 @@
         style="@style/Base.TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingStart="36dp"
-        android:paddingEnd="8dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="8dp"
         android:scrollHorizontally="true"
         android:ellipsize="middle"
         android:singleLine="true"
