--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorPrimaryLight">#5A6AC0</color>
     <color name="colorAccent">#FF5252</color>
+
+    <color name="item_color_white">#FFFFFFFF</color>
+    <color name="item_color_yellow">#5ff9c702</color>
 </resources>
